--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="styles.css"> <!-- Correct path to CSS -->
 </head>
 <body>
+     <header>
+        <h2 class="logo"><img src="./bound copy.png"></h2>
+       
+    </header>
     <div class="container">
         <h1>BOUNDLESS</h1> <!-- Main heading -->
 
